--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,9 +6,8 @@
 trigger:
  branches:
   include:
-  - dev
-  exclude:
   - master
+  
   
 pool:
   vmImage: 'ubuntu-16.04' # examples of other options: 'macOS-10.13', 'vs2017-win2016'
@@ -26,6 +25,6 @@ steps:
     TargetFolder: '$(build.artifactstagingdirectory)'
     
 - task: PublishBuildArtifacts@1    
-  displayName: 'Publish Artifact: drop'
+  displayName: 'Publish Artifact: production'
   inputs:
     PathtoPublish: '$(build.artifactstagingdirectory)'
