--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,8 @@ trigger:
   - master
   
   
-pool: Default
-  #vmImage: 'ubuntu-16.04' # examples of other options: 'macOS-10.13', 'vs2017-win2016'
+pool: 
+  vmImage: 'vs2017-win2016'
 
 variables:
   buildConfiguration: 'Release'
