--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,17 @@ trigger:
 pool: 
   vmImage: 'vs2017-win2016'
 
+name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
+
 variables:
   buildConfiguration: 'Release'
+  MyRunNumber: '1.0.0-CI-$(Build.BuildNumber)'
+
 
 steps:
+- script: echo $(MyRunNumber) # display MyRunNumber
+- script: echo $(Build.BuildNumber) #display Run Number
+
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
