--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,13 +18,14 @@ variables:
   buildConfiguration: 'Release'
   MyRunNumber: '1.0.0-CI-$(Build.BuildNumber)'
   MyDate: '1.0.0-CI-$(Date:yyyyMMdd)$(Rev:.r)-$(tag)'
+  Revision: '$(Rev:.r)'
 
 steps:
 - script: echo $(MyRunNumber) # display MyRunNumber
 - script: echo $(Build.BuildNumber) #display Run Number
 - script: echo $(MyDate) #display My Date
 
-- script: dotnet build --configuration $(buildConfiguration) /p:Version=1.0.1.$(Rev:.r)-$(tag)
+- script: dotnet build --configuration $(buildConfiguration) /p:Version=1.0.1.$(Revision)-$(tag)
   displayName: 'dotnet build $(buildConfiguration) /p:Version=1.0.1.$(Rev:.r)-$(tag)'
 
 - task: CopyFiles@2
