Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
 - script: echo $(Build.BuildNumber) #display Run Number
 - script: echo $(MyDate) #display My Date
 
-- script: dotnet build --configuration $(buildConfiguration) /p:Version=1.0.1.$env:Revision-$(tag)
+- script: dotnet build --configuration $(buildConfiguration) /p:Version=1.0.1.$(env:Revision)-$(tag)
   displayName: 'dotnet build $(buildConfiguration) /p:Version=1.0.1.$(Rev:.r)-$(tag)'
 
 - task: CopyFiles@2
