--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,13 +12,13 @@ trigger:
 pool: 
   vmImage: 'vs2017-win2016'
 
-name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)-$(tag)
+name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Major).$(Minor).$(Patch)-$(tag)
 
 variables:
   buildConfiguration: 'Release'
   MyRunNumber: '1.0.0-CI-$(Build.BuildNumber)'
   MyDate: '1.0.0-CI-$(Date:yyyyMMdd)$(Rev:.r)-$(tag)'
-  Revision: '$(Rev:.r)'
+  Revision: '$(Major).$(Minor).$(Patch)'
 
 steps:
 - script: echo $(MyRunNumber) # display MyRunNumber
