--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,15 +18,19 @@ variables:
   MyRunNumber: '1.0.0-CI-$(Build.BuildNumber)'
   MyDate: '1.0.0-CI-$(Date:yyyyMMdd)$(Rev:.r)-$(tag)'
   Version: '$(Major).$(Minor).$(Patch)-$(tag)'
+  Maj: '1'
+  Min: '2'
+  Pat: $[counter(format('{0}.{1}', variables['Maj'], variables['Min']), 0)]
+  Version2: '$(Maj).$(Min).$(Pat)-$(tag)'
 
-
-name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd).$(Major).$(Minor).$(Patch)-$(tag)
+name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd).$(Maj).$(Min).$(Pat)-$(tag)
 
 steps:
 - script: echo $(MyRunNumber) # display MyRunNumber
 - script: echo $(Build.BuildNumber) #display Run Number
 - script: echo $(MyDate) #display My Date
 - script: echo $(Version) #display My Version
+- script: echo $(Version2) #display My Version2
 
 - script: dotnet build --configuration $(buildConfiguration) /p:Version=$(Version)
   displayName: 'dotnet build $(buildConfiguration) /p:Version=$(Version)'
