Update release-pipeline.yaml for Azure Pipelines

--- a/release-pipeline.yaml
+++ b/release-pipeline.yaml
@@ -23,6 +23,7 @@ steps:
   inputs:
     buildType: 'specific'
     project: '$(System.TeamProject)'
+    pipeline: 'JonatanMedinilla.pipelines-dotnet-core'
     specificBuildWithTriggering: true
     buildVersionToDownload: 'latestFromBranch'
     branchName: '$(Build.SourceBranch)'
