Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,8 @@ steps:
 - bash: |
     echo $(AsaQuery)
 - bash: |
+    echo ${{format(variables['AsaQuery'],'Column','Table', 'Condition')}}
+- bash: |
     echo "##vso[task.setvariable variable=TestFormat]${{format(variables['AsaQuery'],'Column','Table', 'Condition')}}
 - bash: |
     echo $(TestFormat)
