--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,12 +48,12 @@ steps:
     script: |
       set -euxo pipefail
       ls
-      echo "##vso[task.setvariable variable=AsaQuery]\"`cat ./query.txt | awk '{printf "%s\\\\n", $0}'`\""
+      echo "##vso[task.setvariable variable=query]\"`cat ./query.txt | awk '{printf "%s\\\\n", $0}'`\""
     workingDirectory: '$(Build.SourcesDirectory)'
 - bash: |
-    echo $(AsaQuery)
+    echo $(query)
 - bash: |
-    echo ${{format(variables['AsaQuery'],'Column','Table', 'Condition')}}
+    echo ${{format(variables['query'],'Column','Table', 'Condition')}}
 - bash: |
     echo "##vso[task.setvariable variable=TestFormat]${{format(variables['AsaQuery'],'Column','Table', 'Condition')}}
 - bash: |
