--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,7 @@ steps:
 - bash: |
     echo $(query)
 - bash: |
-    echo ${{format(variables['query'],'Column','Table', 'Condition')}}
+    echo ${{format($(query),'Column','Table', 'Condition')}}
 - bash: |
     echo "##vso[task.setvariable variable=TestFormat]${{format(variables['AsaQuery'],'Column','Table', 'Condition')}}
 - bash: |
