--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ steps:
     COLUMN='COLUMNA'
     TABLE='TABLA'
     CONDITION='CONDITION'
-    echo envsubst < $(query)
+    echo $(query)
     echo "##vso[task.setvariable variable=TestFormat]envsubst < $(query)
 - bash: |
     echo $(TestFormat)
