--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,15 +57,8 @@ steps:
       TABLE='TABLA'
       CONDITION='CONDITION'
       ls
-      echo "##vso[task.setvariable variable=query]\"`cat ./query.txt | awk '{printf "%s\\\\n", $0}'`\""
+      echo "##vso[task.setvariable variable=query] envsubst <\"`cat ./query.txt | awk '{printf "%s\\\\n", $0}'`\""
     workingDirectory: '$(Build.SourcesDirectory)'
-- task: Bash@3
-  inputs:
-    targetType: 'inline'
-    script: | 
-       echo $MYVAR
-  env:
-    MyVar: $(query)
 - bash: |
     echo $(query)
 
