--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,7 @@ steps:
       CONDITION='CONDITION'
       ls
       echo "##vso[task.setvariable variable=query] envsubst <\"`cat ./query.txt | awk '{printf "%s\\\\n", $0}'`\""
+      echo $(query)
     workingDirectory: '$(Build.SourcesDirectory)'
 - bash: |
     echo $(query)
