--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,10 @@ steps:
       export COLUMN='COLUMNA'
       export TABLE='TABLA'
       export CONDITION='CONDITION'
+      MYVAR=''
       ls
+      envsubst < `cat < ./query.txt | awk '{printf "%s\\\\n", $0}'` > $MYVAR
+      echo $MYVAR
       echo "##vso[task.setvariable variable=query]\"`cat < ./query.txt | awk '{printf "%s\\\\n", $0}'`\""
     workingDirectory: '$(Build.SourcesDirectory)'
 - bash: |
