Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
       export CONDITION='CONDITION'
       MYVAR=''
       ls
-      envsubst < `cat < ./query.txt | awk '{printf "%s\\\\n", $0}'` > $MYVAR
+      envsubst < `cat ./query.txt | awk '{printf "%s\\\\n", $0}'` > $MYVAR
       echo $MYVAR
       echo "##vso[task.setvariable variable=query]\"`cat < ./query.txt | awk '{printf "%s\\\\n", $0}'`\""
     workingDirectory: '$(Build.SourcesDirectory)'
