--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ variables:
   Version: '$(Major).$(Minor).$(Patch)-$(tag)'
   Maj: '1'
   Min: '2'
-  Pat: '0'
+  Pat: '$(Build.SourceVersion)'
   Version2: '$(Maj).$(Min).$(Pat)-$(tag)'
   query: 'SELECT {0} FROM {0}-{0}-{0}-{0}'
   TestFormat: $[format(variables['query'], 'Column','Table', 'Condition')]
