--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,15 @@ steps:
   env:
     MyVar: $(sauce)
 - task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: | 
+       commitHash=$BUILD_SOURCEVERSION
+       shortCommitHash="${commitHash:0:8}"
+       buildNumber="${$MAJ}.{$MIN}.{$MIN}.{shortCommitHash}"
+       echo "##vso[task.setvariable variable=BuildNumber]buildNumber"
+
+- task: Bash@3
   name: 'asa_query_into_variable1'
   displayName: 'Export ASA query text into pipeline variable 1'
   inputs:
