--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
     script: | 
        commitHash=$BUILD_SOURCEVERSION
        shortCommitHash="${commitHash:0:8}"
-       buildNumber="${$MAJ}.{$MIN}.{$MIN}.{shortCommitHash}"
+       buildNumber="$MAJ.$MIN.$MIN.$shortCommitHash"
        echo "##vso[task.setvariable variable=BuildNumber]buildNumber"
 
 - task: Bash@3
