--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ steps:
        commitHash=$BUILD_SOURCEVERSION
        shortCommitHash="${commitHash:0:8}"
        buildNumber="$MAJ.$MIN.$MIN.$shortCommitHash"
-       echo buildNumber
+       echo $buildNumber
        echo "##vso[task.setvariable variable=BuildNumber]buildNumber"
 
 - task: Bash@3
