--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ steps:
        shortCommitHash="${commitHash:0:8}"
        buildNumber="$MAJ.$MIN.$MIN.$shortCommitHash"
        echo $buildNumber
-       echo "##vso[task.setvariable variable=BuildNumber]buildNumber"
+       echo "##vso[task.setvariable variable=BuildNumber]$buildNumber"
 
 - task: Bash@3
   name: 'DisplayBuildNumber'
