--- a/release-pipeline.yaml
+++ b/release-pipeline.yaml
@@ -3,8 +3,8 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger:
-- master
+# A pipeline with no CI trigger
+trigger: none
 
 pool:
   vmImage: 'vs2017-win2016'
