--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -147,4 +147,4 @@ steps:
       $commitId= "$env:BUILD_SOURCEVERSION"
       
       Write-Host ("##vso[pat]$commitId")
-name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd).$(Maj).$(Min).$(Build.SourceVersion)
+name: $(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd).$(Maj).$(Min).$(Build.SourceVersion)
